--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1413,7 +1413,7 @@ iframe {
 			position: absolute;
 			left: 0;
 			top: 0;
-			background: url("images/bg01.png");
+			background: ;
 			width: 100%;
 			height: 100%;
 			opacity: 0.75;
@@ -1426,7 +1426,7 @@ iframe {
 
 		.image.featured {
 			display: block;
-			width: 100%;
+			width: 84%;
 			margin: 0 0 2.5em 0;
 		}
 
