--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1235,6 +1235,10 @@ input, select, textarea {
 	
 }
 
+#instagram {
+border: solid 1px #3DC2FC;
+}
+
 #LOB {
 	border: solid 2px rgb(61,194,252);
 	
